tests/ui/g-typelist-local-missing-step.stderr
error[E0308]: mismatched types
  --> tests/ui/g-typelist-local-missing-step.rs:13:20
   |
13 |     expect_missing(&PROGRAM);
   |     -------------- ^^^^^^^^ expected `&Program<StepNil>`, found `&Program<StepCons<..., ...>>`
   |     |
   |     arguments to this function are incorrect
   |
   = note: expected reference `&Program<StepNil>`
              found reference `&Program<StepCons<SendStep<Role<0>, Role<1>, hibana::global::Message<hibana::global::LabelMarker<7>, u16>>, StepNil>>`
note: function defined here
  --> tests/ui/g-typelist-local-missing-step.rs:8:4
   |
 8 | fn expect_missing(program: &g::Program<StepNil>) {
   |    ^^^^^^^^^^^^^^ -----------------------------
